# playground

./: README.md  pyproject.toml  requirements.txt  requirements_3_10.txt  requirements_3_12.txt
.github/workflows/: package_test.yaml
playground/schemas/: address.json  airfoilsimulator.schema.json  analysis.schema.json  boundary-layer.schema.json  case.schema.json  condition.schema.json  customer.json  extrapolation.schema.json  geometry.schema.json  grid.schema.json  inflow.schema.json  solver.schema.json  synthesis-shift.schema.json  synthesis.schema.json  trailing-edge-serration.schema.json  vortex-generator.schema.json
tests/: test.py
tests/a/: test.py
tests/configuration/: input.json  input_validated.json  test.py
