[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "playground"
description = "Playground for GitHub workflow for python development."
readme = "README.md"
dynamic = ["version", "dependencies"]
authors = [
  {name = "Elia Daniele", email = "e.daniele@tpicomposites.com"},
]
maintainers = [
  {name = "Elia Daniele", email = "e.daniele@tpicomposites.com"},
  {name = "Conrad Pfueller", email = "c.pfueller@tpicomposites.com"},
]
keywords = ["Python", "Workflow", "GitHub Actions"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries"
]

[project.urls]
Homepage = "https://github.com/edaniele-tpi/playground"
Repository = "https://github.com/edaniele-tpi/playground.git"
Issues = "https://github.com/edaniele-tpi/playground/issues"

[tool.setuptools.dynamic]
version = {attr = "playground.version.__version__"}
dependencies = {file = ["requirements.txt"]}